--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -150,17 +150,21 @@
 }
 
 .main-container {
-    background-image: url(../../assets/bg-bunner-2.jpg);
-    background-size: cover;
-    background-position: center;
+    position: relative;
     width: 100%;
     min-height: 100vh;
-    position: relative;
-    z-index: 0;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.image-wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .main-container::before {
@@ -179,28 +183,18 @@
     z-index: 1;
 }
 
-.right-box {
-    height: 100px;
-    width: 90%;
-    max-width: 500px;
-    background-color: rgb(255, 249, 249);
-    margin: 0 auto;
-}
-
 .down-white-image {
-    background-image: url(../../assets/decor-wave-bottom.webp);
-    background-size: cover;
-    background-position: center;
-    z-index: 10;
     position: absolute;
     left: 0;
     right: 0;
     height: 66px;
     width: 100%;
     bottom: -5px;
+    z-index: 10;
 }
 
 .main-container-content {
+    position: relative;
     min-height: 300px;
     width: 90%;
     max-width: 710px;
@@ -212,26 +206,7 @@
     z-index: 5;
     padding: 20px;
     box-sizing: border-box;
-}
-
-@media (min-width: 768px) {
-    .main-container {
-        min-height: 700px;
-    }
-
-    .right-box {
-        width: 40%;
-    }
-}
-
-@media (min-width: 1200px) {
-    .main-container {
-        height: 900px;
-    }
-
-    .main-container-content {
-        padding: 40px;
-    }
+    margin: 0 auto;
 }
 
 .main-container-content-title {
@@ -248,6 +223,22 @@
     font-weight: 600;
 }
 
+@media (min-width: 768px) {
+    .main-container {
+        min-height: 700px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .main-container {
+        height: 900px;
+    }
+
+    .main-container-content {
+        padding: 40px;
+    }
+}
+
 .mission-section {
     height: 1600px;
     display: flex;
@@ -255,7 +246,6 @@
     justify-content: center;
     align-items: center;
     gap: 50px;
-    /* background-color: green; */
 }
 
 .mission-container {
@@ -265,7 +255,6 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    /* background-color: #1a73e8; */
 }
 
 @keyframes subtle-left-to-right {
@@ -323,7 +312,6 @@
 .write-image {
     width: 100%;
     height: 50%;
-    /* background-color: aqua; */
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -631,23 +619,22 @@
 }
 
 .help-the-globe {
-    background-image: url(../../assets/gallery-12-original.jpg);
     width: 100%;
     height: 335px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    max-width: 100%;
+    position: relative;
+}
+
+.images-of-globe {
+    width: 100%;
+    height: 335px;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .shadow-div {
-    background: linear-gradient(
-        360deg,
-        rgba(18, 18, 18, 0.6) 0.91%,
-        rgba(18, 18, 18, 0.28) 47.77%,
-        rgba(19, 19, 19, 0.29) 99.52%
-    );
-    z-index: 1;
+    position: relative;
     width: 100%;
     height: 100%;
     display: flex;
@@ -657,11 +644,34 @@
     gap: 50px;
 }
 
+.shadow-div::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+        360deg,
+        rgba(18, 18, 18, 0.6) 0.91%,
+        rgba(18, 18, 18, 0.28) 47.77%,
+        rgba(19, 19, 19, 0.29) 99.52%
+    );
+    z-index: 1;
+}
+
 .help-the-globe p {
     font-size: 24px;
-    font: "Rubik", sans-serif;
+    font-family: "Rubik", sans-serif;
     font-weight: 900;
     color: white;
+    position: relative;
+    z-index: 2;
+}
+
+.donate-button {
+    position: relative;
+    z-index: 2;
 }
 
 .donate-button {
