--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -119,7 +119,7 @@
     }
 
     .nav-links {
-        display: flex;
+        display: none;
         flex-direction: column;
         position: absolute;
         top: 110px;
